[package]
name = "specs_dsl"
version = "0.1.0"
authors = ["Alexander XX <freecoder.xx@gmail.com>"]
edition = "2018"

[dependencies]
specs_dsl_attributes = { path = "../attributes" }
specs = { version = "0.15.1", features = ["specs-derive", "shred-derive", "parallel"] }

[dev-dependencies]
rand = "0.7.2"
rayon = "1.2.1"